August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Bug in poisoned fixed

	
August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mines and beartraps work well with the new system.

August 4 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Eating is no longer an evil deed

August 4 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added char* festring::IntegerToChar(long) which is a much faster
	  variant of the nonstandard itoa

August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* SecretKnowledge's defence part now shows block info
	* Player can no longer eat scrolls, silver stones etc.
	* Eating is no more fatal

August 3 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* CanBeSeen and IsVisible systems merged together to CanBeSeen.
	* Added a lot of consts
	* Mine and bear trap pretty much recoded.

August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Blocking is no longer possible when fainted
	* Shields now affect RelativeDanger
	* Blocking now increases weapon skills
	* Added SHIELDS weapon skill category
	* Added more parameters for hit effects
	* Hit effects of gauntlets and boots now work
	* Added system for special unarmed and kick effects
	* Some S&R done:
	  * SingleWeaponSkill -> SWeaponSkill
	  * CategoryWeaponSkill -> CWeaponSkill
	  * gweaponskill -> cweaponskill (where the dev/null did that g come from?)
	* Single weapon skill is now removed correctly when an arm is severed

July 31 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added whip of Calamus
	* Tweaked items thrown at doors
	* Possibly something else (sorry. Bad commit)

July 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Mistress hair color now depends on configuration
	* All orc configurations look different
	* Orc's article is now correct

July 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Hostile and neutral NPCs no longer forget weapon skills like the player and
	  his team
	* Corrected a lot of warnings given by the gcc compilation