@@ -80,7 +80,7 @@ The flight of wielded item and amulet.
 Cats & rat corpses.
 Things thrown at doors.
 %s"
-CollectCreatures
+//CollectCreatures
 //Drinking should be separated.
 //Skeleton volume.
 //"snake is standing"
@@ -96,6 +96,8 @@ Re-enable Golden Eagle Quest danger requirement.
 Prevent escape from Oree.
 Configurations should be visually separated with colors.
 Blocking and visibility should be considered when calculating relative danger.
-Spiders must not trigger mines.
+//Spiders must not trigger mines.
 Hit effects of thrown items.
 Applying wielded item should be possible.
+Splitting lines in highscores.
+Calamus and whip of Calamus should work together.
