@@ -73,13 +73,13 @@ Dungeon 0;
                 Square, Random { Walkable=true; }
 		{
 			Item = mine { Team = MONSTER_TEAM; }
-			Times = 1+rand%10;
+			Times = 0+rand%3;
 		}
 
 		Square, Random { Walkable=true; }
 		{
 			Item = beartrap { Team = MONSTER_TEAM; }
-			Times = 1+rand%5;
+			Times = 0+rand%3;
 		}
 
 		RoomDefault
